fix: lint project and editorconfig

--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "typescript": "^3.9.6"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4"
+    "@types/jest": "^26.0.4",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.13.2",
+    "eslint-plugin-prefer-arrow": "^1.2.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "test": "jest ./src/",
-    "test-dev": "jest ./src/ --watchAll"
+    "test-dev": "jest ./src/ --watchAll",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix --ext .ts",
+    "format:fix": "prettier --write \"./**/*.{ts,js,json,md}\"",
+    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\""
   },
   "repository": {
     "type": "git",
