--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
+      - codecov/upload:
+          file: {{ coverage_report_filepath }}
 workflows:
     build-and-test:
       jobs:
