--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "algorithms and data-structure implementation in TypeScript",
   "main": "no",
+  "scripts": {
+    "test": "jest ./src/",
+    "test-dev": "jest ./src/ --watchAll",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix --ext .ts",
+    "format:fix": "prettier --write \"./**/*.{ts,js,json,md}\"",
+    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\""
+  },
   "dependencies": {
     "jest": "^26.1.0",
     "ts-jest": "^26.1.1",
@@ -12,6 +20,7 @@
     "@types/jest": "^26.0.4",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
+    "codecov": "^3.7.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^23.13.2",
@@ -19,17 +28,13 @@
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5"
   },
-  "scripts": {
-    "test": "jest ./src/",
-    "test-dev": "jest ./src/ --watchAll",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --fix --ext .ts",
-    "format:fix": "prettier --write \"./**/*.{ts,js,json,md}\"",
-    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\""
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aiandev/typescript-algorithms.git"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "keywords": [
     "TypeScript",
